# fast_api

./: pyproject.toml
scripts/: main.py
