[tool.poetry]
name = "my-library"
version = "0.0.0"
description = "testing library for fast API"
authors = ["Nick Herrington <nicholas.herrington@koyohealthtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
